--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </span>
         </p>
         <hr>
-        <h3><u><i>Example ngClick</i></u></h3>
+        <h3><u><i>Example ng-click</i></u></h3>
         <p ng-app ng-click="name='AngularJS'" data-ng-init="name='Click Me'">
             <span ng-bind="name"></span>
         </p>
