View, Model, Storage

--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
             <span ng-bind="name"></span>
         </p>
         <script src="js/angular.js" type="text/javascript"></script>
+        <script src="js/module-file.js" type="text/javascript"></script>
     </body>
 </html>
