Cookies and Storage done!

--- a/cookies/page-one.html
+++ b/cookies/page-one.html
@@ -1,6 +1,16 @@
-<div ng-app="moduleTryCookies" ng-controller="crtlTryCookies">
-    <h1>This page will create new token cookies, that only available 2 hours</h1>
-</div>
-<script src="../js/angular.js" ></script>
-<script src="../js/angular-route.js" ></script>
-<script src="../cookies/module-file-one.js" ></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Angular JS</title>
+    </head>
+    <body>
+        <div ng-app="moduleTryCookies" ng-controller="crtlTryCookies">
+            <h1>This page will create new token cookies, that only available 2 hours</h1>
+        </div>
+        <script src="../js/angular.js" ></script>
+        <script src="../js/angular-route.js" ></script>
+        <script src="../js/angular-cookies.js" ></script>
+        <script src="../cookies/module-file-one.js" ></script>
+    </body>
+</html>
