--- a/localstorage/page-two.html
+++ b/localstorage/page-two.html
@@ -7,12 +7,12 @@
     <body>
         <div ng-app="otherModule" ng-controller="otherController">
             <h1>This page will retrieve token data from cookies</h1>
-            <p ng-bind="token"></p>
-            <p ng-click="removeCookies()"></p>
+            <p>Username : <span ng-bind="storage.username"></span></p>
+            <p>Age : <span ng-bind="storage.age"></span></p>
         </div>
         <script src="../js/angular.js" ></script>
         <script src="../js/angular-route.js" ></script>
-        <script src="../js/angular-cookies.js" ></script>
-        <script src="../cookies/module-file-two.js" ></script>
+        <script src="../js/ngStorage.js" ></script>
+        <script src="../localstorage/module-file-two.js" ></script>
     </body>
 </html>
